--- a/app/src/main/res/layout/activity_favourite.xml
+++ b/app/src/main/res/layout/activity_favourite.xml
@@ -74,11 +74,11 @@
             android:text="Home" />
 
         <TextView
-            android:id="@+id/searchscreen"
+            android:id="@+id/exploreScreen3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="40dp"
-            android:drawableTop="@drawable/baseline_search_24"
+            android:drawableTop="@drawable/baseline_explore_24"
             android:paddingTop="5dp"
             android:text="Search" />
 
@@ -92,7 +92,7 @@
             android:text="Favourites" />
 
         <TextView
-            android:id="@+id/profilescreen"
+            android:id="@+id/profilescreen3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="40dp"
