--- a/app/src/main/res/layout/editingprofile.xml
+++ b/app/src/main/res/layout/editingprofile.xml
@@ -15,6 +15,7 @@
             android:layout_height="30dp"
             android:layout_marginLeft="25dp"
             android:layout_marginTop="25dp"
+            android:id="@+id/backFromEditProfile"
             android:background="@drawable/backbutton">
 
         </ImageView>
@@ -41,6 +42,7 @@
                 android:text="Kawshar Emanden"
                 android:textColor="@color/black"
                 android:textSize="25dp"
+                android:id="@+id/editProfileUserName"
                 android:textStyle="bold" />
 
             <EditText
@@ -84,7 +86,9 @@
                 android:layout_marginLeft="100dp"
                 android:text="Confirm"
                 android:textStyle="bold"
-                android:background="@color/black"/>
+                android:background="@color/blue"
+                android:id="@+id/editSubmit"/>
+
         </RelativeLayout>
     </RelativeLayout>
 </FrameLayout>
