--- a/app/src/main/res/layout/settingpage.xml
+++ b/app/src/main/res/layout/settingpage.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     tools:context=".SettingPage"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
-
+    android:layout_height="match_parent">
 
 
     <RelativeLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/homebg"
@@ -21,29 +20,30 @@
             android:layout_height="30dp"
             android:layout_marginLeft="25dp"
             android:layout_marginTop="25dp"
-            android:background="@drawable/backbutton"></ImageView>
+            android:background="@drawable/backbutton" />
 
         <TextView
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_marginLeft="110dp"
             android:layout_marginTop="20dp"
+            android:gravity="center"
             android:paddingTop="4dp"
             android:text="Settings"
             android:textAlignment="center"
-            android:textSize="20dp"
-            android:gravity="center"
             android:textColor="@color/black"
-            android:textStyle="bold"/>
-
-
+            android:textSize="20dp"
+            android:textStyle="bold" />
 
 
     </RelativeLayout>
 
     <ScrollView
         android:layout_width="wrap_content"
-        android:layout_height="559dp">
+        android:layout_height="match_parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginBottom="62dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -58,11 +58,12 @@
                 android:src="@drawable/baseline_account_circle_24" />
 
             <TextView
+                android:id="@+id/settingUserName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
-                android:text="Kawshar Emanden"
+                android:text="Guest"
                 android:textColor="@color/black"
                 android:textSize="22dp"
                 android:textStyle="bold" />
@@ -277,7 +278,9 @@
                 <RelativeLayout
                     android:layout_width="351dp"
                     android:layout_height="47dp"
-                    android:layout_marginTop="20dp">
+                    android:layout_marginTop="20dp"
+                    android:clickable="true"
+                    android:id="@+id/logout">
 
                     <ImageView
                         android:layout_width="50dp"
@@ -310,7 +313,57 @@
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
-</FrameLayout>
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="#89CFEF	"
+        android:paddingBottom="3dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_gravity="bottom">
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/homescreen4"
+            android:text="Home"
+            android:drawableTop="@drawable/baseline_home_24"
+            android:layout_marginLeft="40dp"
+            android:paddingTop="5dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/exploreScreen4"
+            android:text="Explore"
+            android:drawableTop="@drawable/baseline_explore_24"
+            android:layout_marginLeft="40dp"
+            android:paddingTop="5dp"
+            android:clickable="true"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/favscreen4"
+            android:text="Favourites"
+            android:drawableTop="@drawable/baseline_favorite_24"
+            android:layout_marginLeft="40dp"
+            android:paddingTop="5dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/profileScreen4"
+            android:text="Profile"
+            android:drawableTop="@drawable/baseline_account_circle_24"
+            android:layout_marginLeft="40dp"
+            android:paddingTop="5dp" />
+
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
