--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,7 +13,7 @@
         android:text="Hi, Guest!"
         android:textSize="30dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="30dp"/>
+        android:layout_marginTop="70dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -21,15 +21,14 @@
         android:text="Let's discover a new adventure"
         android:textSize="16dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="75dp"/>
+        android:layout_marginTop="115dp"/>
 
     <SearchView
         android:layout_width="372dp"
         android:layout_height="58dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="120dp"
-        android:theme="@style/CardView.Dark"
-        />
+        android:layout_marginTop="150dp"
+        android:theme="@style/CardView.Dark" />
 
 
 </RelativeLayout>
