--- a/app/src/main/res/layout/settingpage.xml
+++ b/app/src/main/res/layout/settingpage.xml
@@ -22,7 +22,6 @@
             android:layout_marginTop="25dp"
             android:background="@drawable/backbutton" />
 
-<<<<<<< HEAD
         <ScrollView
             android:layout_width="wrap_content"
             android:layout_height="559dp">
@@ -50,7 +49,8 @@
                     android:layout_width="94dp"
                     android:layout_height="96dp"
                     android:layout_gravity="center"
-=======
+                    android:src="@drawable/baseline_account_circle_24"/>
+
         <TextView
             android:layout_width="200dp"
             android:layout_height="50dp"
@@ -63,9 +63,6 @@
             android:textColor="@color/black"
             android:textSize="20dp"
             android:textStyle="bold" />
->>>>>>> 6d0c46f920d4217cf3d4bcfda1d480cff6323f49
-
-                    android:src="@drawable/baseline_account_circle_24" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -75,7 +72,8 @@
                     android:text="Kawshar Emanden"
                     android:textColor="@color/black"
                     android:textSize="22dp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:id="@+id/settingUserName"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -324,286 +322,7 @@
 
     </RelativeLayout>
 
-<<<<<<< HEAD
-</FrameLayout>
-=======
-    <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginBottom="62dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <ImageView
-                android:layout_width="94dp"
-                android:layout_height="96dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="70dp"
-                android:src="@drawable/baseline_account_circle_24" />
-
-            <TextView
-                android:id="@+id/settingUserName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:text="Guest"
-                android:textColor="@color/black"
-                android:textSize="22dp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="+230 5904 5641"
-                android:textColor="#595454"
-                android:textSize="15sp" />
-
-            <Button
-                android:id="@+id/buttonEdit"
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/round_back_secondary"
-                android:paddingStart="30dp"
-                android:paddingEnd="20dp"
-                android:text="Edit Profile"
-                android:textAllCaps="false"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <LinearLayout
-                android:layout_width="374dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="40dp"
-                android:orientation="vertical"
-                android:padding="15dp">
-
-                <RelativeLayout
-                    android:layout_width="351dp"
-                    android:layout_height="47dp"
-                    android:layout_marginTop="10dp">
-
-                    <ImageView
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:background="@color/teal_700"
-                        android:padding="0dp"
-                        android:src="@drawable/baseline_circle_notifications_24" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginLeft="100dp"
-                        android:layout_marginTop="10dp"
-                        android:text="Notifications"
-                        android:textColor="@color/black"
-                        android:textSize="20dp"
-                        android:textStyle="bold" />
-
-                    <androidx.appcompat.widget.SwitchCompat
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginEnd="22dp"
-                        android:switchMinWidth="65dp"
-                        android:textOff="off"
-                        android:textOn="on"
-                        android:thumb="@drawable/thumb"
-                        app:showText="true"
-                        app:track="@drawable/track" />
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_width="351dp"
-                    android:layout_height="47dp"
-                    android:layout_marginTop="20dp">
-
-                    <ImageView
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:background="@color/teal_700"
-                        android:padding="0dp"
-                        android:src="@drawable/baseline_data_saver_off_24" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginLeft="100dp"
-                        android:layout_marginTop="10dp"
-                        android:text="Data Saver"
-                        android:textColor="@color/black"
-                        android:textSize="20dp"
-                        android:textStyle="bold" />
-
-                    <androidx.appcompat.widget.SwitchCompat
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginEnd="22dp"
-                        android:switchMinWidth="65dp"
-                        android:textOff="off"
-                        android:textOn="on"
-                        android:thumb="@drawable/thumb"
-                        app:showText="true"
-                        app:track="@drawable/track" />
-
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_width="351dp"
-                    android:layout_height="47dp"
-                    android:layout_marginTop="20dp">
-
-                    <ImageView
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:background="@color/teal_700"
-                        android:padding="0dp"
-                        android:src="@drawable/baseline_security_24" />
-
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginLeft="100dp"
-                        android:layout_marginTop="10dp"
-                        android:text="Privacy Policy"
-                        android:textColor="@color/black"
-                        android:textSize="20dp"
-                        android:textStyle="bold" />
-
-                    <ImageView
-                        android:id="@+id/buttonPrivacy"
-                        android:layout_width="85dp"
-                        android:layout_height="85dp"
-                        android:layout_marginLeft="260dp"
-                        android:src="@drawable/baseline_navigate_next_24" />
-
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_width="351dp"
-                    android:layout_height="47dp"
-                    android:layout_marginTop="20dp">
-
-                    <ImageView
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:background="@color/teal_700"
-                        android:padding="0dp"
-                        android:src="@drawable/baseline_help_24" />
-
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginLeft="100dp"
-                        android:layout_marginTop="10dp"
-                        android:text="Help"
-                        android:textColor="@color/black"
-                        android:textSize="20dp"
-                        android:textStyle="bold" />
-
-                    <ImageView
-                        android:id="@+id/buttonHelp"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:layout_marginLeft="260dp"
-                        android:src="@drawable/baseline_navigate_next_24" />
-
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_width="351dp"
-                    android:layout_height="47dp"
-                    android:layout_marginTop="20dp">
-
-                    <ImageView
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:background="@color/teal_700"
-                        android:padding="0dp"
-                        android:src="@drawable/baseline_info_24" />
-
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginLeft="100dp"
-                        android:layout_marginTop="10dp"
-                        android:text="About"
-                        android:textColor="@color/black"
-                        android:textSize="20dp"
-                        android:textStyle="bold" />
-
-                    <ImageView
-                        android:id="@+id/buttonAbout"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:layout_marginLeft="260dp"
-                        android:src="@drawable/baseline_navigate_next_24" />
-
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_width="351dp"
-                    android:layout_height="47dp"
-                    android:layout_marginTop="20dp"
-                    android:clickable="true"
-                    android:id="@+id/logout">
-
-                    <ImageView
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:background="@color/teal_700"
-                        android:padding="0dp"
-                        android:src="@drawable/baseline_logout_24" />
-
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginLeft="100dp"
-                        android:layout_marginTop="10dp"
-                        android:text="Log Out"
-                        android:textColor="@color/black"
-                        android:textSize="20dp"
-                        android:textStyle="bold" />
-
-                    <ImageView
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:layout_marginLeft="260dp"
-                        android:src="@drawable/baseline_navigate_next_24" />
-
-                </RelativeLayout>
-
-
-            </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -652,17 +371,8 @@
 
     </LinearLayout>
 
+
 </androidx.constraintlayout.widget.ConstraintLayout>
->>>>>>> 6d0c46f920d4217cf3d4bcfda1d480cff6323f49
-
-
-
-
-
-
-
-
-
 
 
 
