--- a/app/src/main/res/layout/activity_top_hotels.xml
+++ b/app/src/main/res/layout/activity_top_hotels.xml
@@ -84,6 +84,16 @@
         android:textSize="18sp"
         />
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+        </RelativeLayout>
+
+    </ScrollView>
     <androidx.cardview.widget.CardView
         android:layout_width="190dp"
         android:layout_height="215dp"
