--- a/app/src/main/res/layout/activity_le_morne.xml
+++ b/app/src/main/res/layout/activity_le_morne.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:src="@drawable/lemorne"
+            android:src="@drawable/le_morne"
             />
     </androidx.cardview.widget.CardView>
 
