--- a/app/src/main/res/layout/activity_safari.xml
+++ b/app/src/main/res/layout/activity_safari.xml
@@ -4,16 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/screenPlaces"
     tools:context=".safari">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="450dp"
+        android:layout_height="430dp"
         app:cardElevation="0dp"
-        app:cardCornerRadius="25dp">
+        app:cardCornerRadius="25dp"
+        android:id="@+id/imageContent">
 
         <ImageView
-            android:id="@+id/safari"
+            android:id="@+id/caudan"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
@@ -24,39 +26,43 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SAFARI Mauritius"
+        android:text="Casela Safari"
         android:fontFamily="sans-serif-black"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="22dp"
-        android:layout_marginTop="410dp"
+        android:layout_above="@+id/imageDescription"
+        android:layout_marginBottom="10dp"
         android:layout_marginStart="20dp"
         />
 
-    <ImageButton
+    <CheckBox
         android:id="@+id/favourite5"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:background="@drawable/baseline_favorite_border_24"
-        android:layout_marginTop="410dp"
-        android:layout_marginStart="360dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_above="@+id/imageDescription"
+        android:layout_marginBottom="5dp"
+        android:layout_marginStart="355dp"
+        android:contentDescription="add to favourite"
         />
 
     <ImageButton
         android:id="@+id/back"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:background="@drawable/baseline_arrow_back_white"
+        android:background="@drawable/baseline_back"
         android:layout_marginTop="25dp"
         android:layout_marginStart="15dp"
+        android:contentDescription="go back"
         />
 
     <ImageButton
         android:id="@+id/profile"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:background="@drawable/baseline_person_outline_24"
         android:layout_marginTop="25dp"
         android:layout_marginStart="325dp"
+        android:contentDescription="go to profile"
         />
 
     <ImageButton
@@ -69,104 +75,96 @@
         android:layout_marginEnd="15dp"
         />
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="380dp"
-        android:layout_height="40dp"
-        app:cardElevation="0dp"
-        app:cardCornerRadius="25dp"
-        android:layout_marginTop="65dp"
-        android:layout_marginStart="15dp"
-        app:cardBackgroundColor="@color/lg">
 
-    </androidx.cardview.widget.CardView>
 
-    <ImageButton
-        android:id="@+id/search"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:background="@drawable/outline_search_24"
-        android:layout_marginTop="75dp"
-        android:layout_marginStart="25dp"
-        />
 
-    <TextView
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Search"
-        android:textColor="@color/black"
-        android:textSize="20dp"
-        android:layout_marginTop="73dp"
-        android:layout_marginStart="65dp"
-        />
+        android:layout_below="@+id/imageContent"
+        android:id="@+id/imageDescription"
+        >
 
-    <TextView
-        android:layout_width="370dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="485dp"
-        android:text="Become a modern-day adventurer for the day at Casela! Enjoy a wide variety of exciting safari activities from quad biking to encountering the world’s tallest animals."
-        android:textAlignment="center"
-        android:textColor="@color/black" />
+        <TextView
+            android:layout_width="370dp"
+            android:layout_height="wrap_content"
+            android:text="Become a modern-day adventurer for the day at Casela! Enjoy a wide variety of exciting safari activities from quad biking to encountering the world’s tallest animals."
+            android:textAlignment="center"
+            android:id="@+id/textContent"
+            android:layout_marginTop="20dp"
+            android:layout_centerHorizontal="true"
+            android:textColor="@color/black" />
+
+        <ImageView
+            android:id="@+id/location"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:background="@drawable/baseline_location_on_24"
+            android:layout_marginTop="15dp"
+            android:layout_marginStart="15dp"
+            android:layout_below="@id/textContent"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Royal Road Cascavelle, Mauritius"
+            android:fontFamily="sans-serif-black"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="45dp"
+            android:id="@+id/locationContent"
+            android:layout_below="@id/textContent"
+            />
+
+        <ImageView
+            android:id="@+id/time"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:background="@drawable/baseline_time_24"
+            android:layout_marginTop="15dp"
+            android:layout_marginStart="15dp"
+            android:layout_below="@id/location"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="09 30 - 17 00"
+            android:fontFamily="sans-serif-black"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="45dp"
+            android:layout_below="@id/locationContent"
+            android:id="@+id/openTime"
+            />
+
+        <ImageView
+            android:id="@+id/num"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:background="@drawable/baseline_local_phone_24"
+            android:layout_marginTop="14dp"
+            android:layout_marginStart="15dp"
+            android:layout_below="@+id/openTime"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="+230 401 6500"
+            android:fontFamily="sans-serif-black"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="45dp"
+            android:layout_below="@id/openTime"
+            />
+
+    </RelativeLayout>
 
 
-    <TextView
-        android:id="@+id/location"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:background="@drawable/baseline_location_on_24"
-        android:layout_marginTop="575dp"
-        android:layout_marginStart="15dp"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Royal Road Cascavelle, Mauritius"
-        android:fontFamily="sans-serif-black"
-        android:textColor="@color/black"
-        android:textSize="15dp"
-        android:layout_marginTop="575dp"
-        android:layout_marginStart="45dp"
-        />
-
-    <TextView
-        android:id="@+id/time"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:background="@drawable/baseline_time_24"
-        android:layout_marginTop="600dp"
-        android:layout_marginStart="15dp"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="09 30 - 17 00"
-        android:fontFamily="sans-serif-black"
-        android:textColor="@color/black"
-        android:textSize="15dp"
-        android:layout_marginTop="600dp"
-        android:layout_marginStart="45dp"
-        />
-
-    <TextView
-        android:id="@+id/num"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:background="@drawable/baseline_local_phone_24"
-        android:layout_marginTop="625dp"
-        android:layout_marginStart="15dp"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="+230 401 6500"
-        android:fontFamily="sans-serif-black"
-        android:textColor="@color/black"
-        android:textSize="15dp"
-        android:layout_marginTop="625dp"
-        android:layout_marginStart="45dp"
-        />
 
 </RelativeLayout>
