--- a/app/src/main/res/layout/activity_ssr_botanical_garden.xml
+++ b/app/src/main/res/layout/activity_ssr_botanical_garden.xml
@@ -13,11 +13,11 @@
         app:cardCornerRadius="25dp">
 
         <ImageView
-            android:id="@+id/ssrgarden"
+            android:id="@+id/leMorne"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:src="@drawable/ssrbotanicalgarden"
+            android:src="@drawable/ssr_botanical_garden"
             />
     </androidx.cardview.widget.CardView>
 
@@ -32,11 +32,10 @@
         android:layout_marginStart="20dp"
         />
 
-    <ImageButton
+    <CheckBox
         android:id="@+id/favourite5"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:background="@drawable/baseline_favorite_border_24"
         android:layout_marginTop="410dp"
         android:layout_marginStart="360dp"
         />
