--- a/app/src/main/res/layout/activity_top_nature.xml
+++ b/app/src/main/res/layout/activity_top_nature.xml
@@ -97,7 +97,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:background="@drawable/ssrbotanicalgarden"
+            android:background="@drawable/ssr_botanical_garden"
             />
     </androidx.cardview.widget.CardView>
 
@@ -200,7 +200,7 @@
             android:id="@+id/leMorne"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/lemorne"
+            android:background="@drawable/le_morne"
             />
     </androidx.cardview.widget.CardView>
 
