--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -340,9 +340,10 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:fontFamily="@font/arizonia"
-                    android:text="Culture"
+                    android:text="Club"
                     android:textColor="@color/white"
-                    android:textSize="50sp" />
+                    android:textSize="50sp"
+                    android:id="@+id/toClub"/>
             </FrameLayout>
 
 
