--- a/app/src/main/res/layout/activity_top_hotels.xml
+++ b/app/src/main/res/layout/activity_top_hotels.xml
@@ -250,7 +250,7 @@
             android:layout_width="190dp"
             android:layout_height="215dp"
             android:scaleType="centerCrop"
-            android:background="@drawable/redchurch"
+            android:background="@drawable/red_church"
             />
     </androidx.cardview.widget.CardView>
 
