--- a/app/src/main/res/layout/activity_caudanwaterfront.xml
+++ b/app/src/main/res/layout/activity_caudanwaterfront.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/screenPlaces"
-    tools:context=".caudanwaterfront">
+    tools:context=".sitarIndianFood">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -57,8 +57,8 @@
 
     <ImageButton
         android:id="@+id/profile"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:background="@drawable/baseline_person_outline_24"
         android:layout_marginTop="25dp"
         android:layout_marginStart="325dp"
@@ -75,36 +75,6 @@
         android:layout_marginEnd="15dp"
         />
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="380dp"
-        android:layout_height="40dp"
-        app:cardElevation="0dp"
-        app:cardCornerRadius="25dp"
-        android:layout_marginTop="75dp"
-        android:layout_marginStart="15dp"
-        app:cardBackgroundColor="@color/lg">
-
-    </androidx.cardview.widget.CardView>
-
-    <ImageButton
-        android:id="@+id/search"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:background="@drawable/outline_search_24"
-        android:layout_marginTop="75dp"
-        android:layout_marginStart="25dp"
-        android:contentDescription="search icon"
-        />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Search"
-        android:textColor="@color/black"
-        android:textSize="20dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginStart="65dp"
-        />
 
 
 
@@ -125,12 +95,12 @@
             android:layout_centerHorizontal="true"
             android:textColor="@color/black" />
 
-        <TextView
+        <ImageView
             android:id="@+id/location"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:background="@drawable/baseline_location_on_24"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15dp"
             android:layout_marginStart="15dp"
             android:layout_below="@id/textContent"
             />
@@ -148,12 +118,12 @@
             android:layout_below="@id/textContent"
             />
 
-        <TextView
+        <ImageView
             android:id="@+id/time"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:background="@drawable/baseline_time_24"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15dp"
             android:layout_marginStart="15dp"
             android:layout_below="@id/location"
             />
@@ -171,12 +141,12 @@
             android:id="@+id/openTime"
             />
 
-        <TextView
+        <ImageView
             android:id="@+id/num"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:background="@drawable/baseline_local_phone_24"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="14dp"
             android:layout_marginStart="15dp"
             android:layout_below="@+id/openTime"
             />
