--- a/app/src/main/res/layout/activity_screen19.xml
+++ b/app/src/main/res/layout/activity_screen19.xml
@@ -41,7 +41,7 @@
     <TextView
         android:text="Beau Plan Sugar Mill"
         android:layout_marginTop="125dp"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="140dp"
         android:textAlignment="center"
         android:layout_width="300dp"
         android:layout_height="40dp"
@@ -59,6 +59,21 @@
 
         >
     </ImageView>
+
+
+
+    <ScrollView
+        android:id="@+id/scrollView19"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="40dp">
 
 
     <TextView
@@ -95,7 +110,9 @@
         android:textSize="15dp"
         />
 
+    </RelativeLayout>
 
+    </ScrollView>
 
 
 </FrameLayout>
