--- a/app/src/main/res/layout/activity_screen10.xml
+++ b/app/src/main/res/layout/activity_screen10.xml
@@ -38,6 +38,21 @@
         android:layout_marginTop="110dp"
         android:layout_gravity="center_horizontal"/>
 
+
+    <ScrollView
+        android:id="@+id/scrollView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="40dp">
+
+
     <TextView
         android:text="Abandoned by the Dutch, the island became a French colony when, in September 1715, Guillaume Dufresne D'Arsel landed and took possession of this precious port of call on the route to India. He named the island 'Isle de France', but it was only in 1721 that the French started their occupation."
         android:layout_marginTop="140dp"
@@ -88,7 +103,9 @@
         android:textSize="15dp"
         />
 
+    </RelativeLayout>
 
+    </ScrollView>
 
 
 
