--- a/app/src/main/res/layout/activity_screen14.xml
+++ b/app/src/main/res/layout/activity_screen14.xml
@@ -40,6 +40,21 @@
         android:layout_marginTop="110dp"
         android:layout_gravity="center_horizontal"/>
 
+
+    <ScrollView
+        android:id="@+id/scrollView14"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="40dp">
+
+
     <TextView
         android:text="The British administration, which began with Robert Farquhar as governor, was followed by rapid social and economic changes. One of the most important events was the abolition of slavery in 1835. The planters received a compensation of two million pounds sterling for the loss of their slaves which had been imported from Africa and Madagascar during the French occupation."
         android:layout_marginTop="125dp"
@@ -96,7 +111,9 @@
         />
 
 
+    </RelativeLayout>
 
+    </ScrollView>
 
 
 </FrameLayout>
