--- a/app/src/main/res/layout/activity_screen23.xml
+++ b/app/src/main/res/layout/activity_screen23.xml
@@ -42,6 +42,21 @@
         android:layout_gravity="center_horizontal"/>
 
 
+    <ScrollView
+        android:id="@+id/scrollView23"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="40dp">
+
+
+
     <TextView
         android:text="Date"
         android:layout_marginTop="130dp"
@@ -457,7 +472,9 @@
         android:textSize="15dp"
         />
 
+    </RelativeLayout>
 
+    </ScrollView>
 
 
 </FrameLayout>
