--- a/app/src/main/res/layout/activity_screen24.xml
+++ b/app/src/main/res/layout/activity_screen24.xml
@@ -41,6 +41,21 @@
         android:layout_gravity="center_horizontal"/>
 
 
+    <ScrollView
+        android:id="@+id/scrollView24"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="40dp">
+
+
+
     <TextView
         android:text=" 1. Tapi mo gran papa plin pinez ? - Zetwal"
         android:layout_marginTop="140dp"
@@ -244,6 +259,8 @@
         android:textSize="15dp"
         />
 
+    </RelativeLayout>
 
+    </ScrollView>
 
 </FrameLayout>
