--- a/app/src/main/res/layout/activity_screen26.xml
+++ b/app/src/main/res/layout/activity_screen26.xml
@@ -42,6 +42,20 @@
         android:layout_gravity="center_horizontal"/>
 
 
+    <ScrollView
+        android:id="@+id/scrollView26"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="40dp">
+
+
     <ImageView
         android:layout_width="240dp"
         android:layout_height="190dp"
@@ -75,6 +89,8 @@
         android:textSize="15dp"
         />
 
+    </RelativeLayout>
 
+    </ScrollView>
 
 </FrameLayout>
