--- a/app/src/main/res/layout/activity_screen27.xml
+++ b/app/src/main/res/layout/activity_screen27.xml
@@ -41,6 +41,23 @@
         android:layout_gravity="center_horizontal"/>
 
 
+
+    <ScrollView
+        android:id="@+id/scrollView28"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="40dp">
+
+
+
+
     <ImageView
         android:layout_width="260dp"
         android:layout_height="190dp"
@@ -75,7 +92,9 @@
         android:textSize="15dp"
         />
 
+    </RelativeLayout>
 
+    </ScrollView>
 
 
 </FrameLayout>
